--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="header-content-inner text-center">
                         <!-- <h1>Name is an early-learning app that engages your child by adapting to their learning styles!</h1> -->
                         <!-- <h1><i>AdaptiveLearning</i> is an early-learning app that engages your child by adapting to their preferences!</h1> -->
-                        <h1>ConvexMind is an early-learning app that gives you feedback on your child's learning milestones!</h1>
+                        <h1>ConvexMind is an educational gaming app that engages your child while giving you feedback on their learning milestones!</h1>
                         <!-- <a href="#download" class="btn btn-outline btn-xl page-scroll">Download now for free!</a> -->
                         <a href="http://eepurl.com/c_FONT" class="btn btn-outline btn-xl page-scroll">I'm interested!</a>
                         <!-- href="#download" -->
